--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?
-			   client=ca-pub-9368116902426905"
-     crossorigin="anonymous"></script>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Mithlesh_Singh landing page.">
@@ -475,46 +472,46 @@
                     <a href="#" data-filter=".new" class="active">
                         All
                     </a>
-                    <a href="#" data-filter=".advertising">
+                    <a href="#" data-filter=".nature">
                         Nature
                     </a>
                     <a href="#" data-filter=".mks">
                         Portrade
                     </a>
-                    <a href="#" data-filter=".web">
+                    <a href="#" data-filter=".flower">
                         Flowers
                     </a>
                 </div>
                 <div class="portfolio-container"> 
-                    <div class="col-md-6 col-lg-4 web new">
+                    <div class="col-md-6 col-lg-4 flower new">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-1.jpg" class="img-fluid">
+                            <img src="./assets/imgs/flower-1.jpg" class="img-fluid">
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-1.jpeg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-1.jpeg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>   
                         </div>             
                     </div>
-                    <div class="col-md-6 col-lg-4 web new">
+                    <div class="col-md-6 col-lg-4 flower new">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-2.jpg" class="img-fluid">
+                            <img src="./assets/imgs/flower-2.jpg" class="img-fluid">
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-2.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-2.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div> 
                         </div>                         
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising new">
+                    <div class="col-md-6 col-lg-4 nature new">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/advertising-2.jpg" class="img-fluid">                         
+                            <img src="./assets/imgs/nature-2.jpg" class="img-fluid">                         
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/advertising-2.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/nature-2.jpg"></a>
                                 <div class="text-holder">
                                     <!-- <h6 class="title">ADVERSTISING</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
@@ -522,83 +519,83 @@
                             </div>    
                         </div>              
                     </div> 
-                    <div class="col-md-6 col-lg-4 web">
+                    <div class="col-md-6 col-lg-4 flower">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-4.jpg" class="img-fluid">
+                            <img src="./assets/imgs/flower-4.jpg" class="img-fluid">
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-4.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-4.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 web">
+                    <div class="col-md-6 col-lg-4 flower">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-5.jpg" class="img-fluid">
+                            <img src="./assets/imgs/flower-5.jpg" class="img-fluid">
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-5.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-5.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 web">
+                    <div class="col-md-6 col-lg-4 flower">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-6.jpg" class="img-fluid">
+                            <img src="./assets/imgs/flower-6.jpg" class="img-fluid">
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-6.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-6.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 web">
+                    <div class="col-md-6 col-lg-4 flower">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-7.jpg" class="img-fluid">
+                            <img src="./assets/imgs/flower-7.jpg" class="img-fluid">
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-7.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-7.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 web">
+                    <div class="col-md-6 col-lg-4 flower">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-8.jpeg" class="img-fluid">
+                            <img src="./assets/imgs/flower-8.jpeg" class="img-fluid">
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-8.jpeg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-8.jpeg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 web">
+                    <div class="col-md-6 col-lg-4 flower">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-9.jpg" class="img-fluid">
+                            <img src="./assets/imgs/flower-9.jpg" class="img-fluid">
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-9.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-9.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising"> 
+                    <div class="col-md-6 col-lg-4 nature"> 
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/advertising-1.jpeg" class="img-fluid">                               
+                            <img src="./assets/imgs/nature-1.jpeg" class="img-fluid">                               
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/advertising-1.jpeg"></a>
+                                <a class="img-popup" href="./assets/imgs/nature-1.jpeg"></a>
                                 <div class="text-holder">
                                     <!-- <h6 class="title">ADVERSITING</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
@@ -606,11 +603,11 @@
                             </div>
                         </div>                                                       
                     </div> 
-                    <div class="col-md-6 col-lg-4 advertising"> 
+                    <div class="col-md-6 col-lg-4 nature"> 
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/advertising-5.jpg" class="img-fluid">                               
+                            <img src="./assets/imgs/nature-5.jpg" class="img-fluid">                               
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/advertising-5.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/nature-5.jpg"></a>
                                 <div class="text-holder">
                                     <!-- <h6 class="title">ADVERSITING</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
@@ -618,11 +615,11 @@
                             </div>
                         </div>                                                       
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising"> 
+                    <div class="col-md-6 col-lg-4 nature"> 
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/advertising-6.jpg" class="img-fluid">                               
+                            <img src="./assets/imgs/nature-6.jpg" class="img-fluid">                               
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/advertising-6.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/nature-6.jpg"></a>
                                 <div class="text-holder">
                                     <!-- <h6 class="title">ADVERSITING</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
@@ -630,23 +627,23 @@
                             </div>
                         </div>                                                       
                     </div>  
-                    <div class="col-md-6 col-lg-4 web new">
+                    <div class="col-md-6 col-lg-4 flower new">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/web-3.jpg" class="img-fluid">  
+                            <img src="./assets/imgs/flower-3.jpg" class="img-fluid">  
                            <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/web-3.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/flower-3.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">WEB</h6>
+                                    <!-- <h6 class="title">flower</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 advertising new">
+                    <div class="col-md-6 col-lg-4 nature new">
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/advertising-3.jpg" class="img-fluid">       
+                            <img src="./assets/imgs/nature-3.jpg" class="img-fluid">       
                            <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/advertising-3.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/nature-3.jpg"></a>
                                 <div class="text-holder">
                                     <!-- <h6 class="title">ADVERSITING</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
@@ -654,13 +651,13 @@
                             </div>
                         </div>                                                       
                     </div> 
-                    <div class="col-md-6 col-lg-4 advertising new"> 
+                    <div class="col-md-6 col-lg-4 nature new"> 
                         <div class="portfolio-item">
-                            <img src="./assets/imgs/advertising-4.jpg" class="img-fluid">            
+                            <img src="./assets/imgs/nature-4.jpg" class="img-fluid">            
                             <div class="content-holder">
-                                <a class="img-popup" href="./assets/imgs/advertising-4.jpg"></a>
+                                <a class="img-popup" href="./assets/imgs/nature-4.jpg"></a>
                                 <div class="text-holder">
-                                    <!-- <h6 class="title">ADVERTISING</h6>
+                                    <!-- <h6 class="title">nature</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p> -->
                                 </div>
                             </div>
