--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@ Among all the incredible ways in which I can make an impact, I believe that the 
                         </div>
                     </div>
                 </div>
-		     	<script type="text/javascript" src="https://freehitcounters.org/count/bvqp"></script><br>
- <a href='http://www.freevisitorcounters.com'>Get Visitor Counters</a> <script type='text/javascript' src='https://whomania.com/ctr?id=93a4415bc73b663022df2b35fbf79ede4226d1cd'></script>
+		     	<script type="text/javascript" src="https://freehitcounters.org/count/bvqq"></script><br>
+ <a href='http://www.freevisitorcounters.com'>Get Visitor Counters</a> <script type='text/javascript' src='https://whomania.com/ctr?id=f14eb3f7d8182fa486d1cdc360f287caf8b99bb2'></script>
             </div>
         </div>
     </section>
