--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ Among all the incredible ways in which I can make an impact, I believe that the 
                     </div>
                 </div>
 		     	<script type="text/javascript" src="https://freehitcounters.org/count/bvqs"></script><br>
- <a href='http://www.freevisitorcounters.com'>Get Visitor Counters</a> <script type='text/javascript' src='https://whomania.com/ctr?id=7df5f84cd1540419a37a070ed0eabe2ffcd732d8'></script>
+ <a href='http://www.freevisitorcounters.com'></a> <script type='text/javascript' src='https://whomania.com/ctr?id=7df5f84cd1540419a37a070ed0eabe2ffcd732d8'></script>
             </div>
         </div>
     </section>
